fixed alignment of volume buttons

--- a/widgets/mixer/mixer.html
+++ b/widgets/mixer/mixer.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mixer - Lofi Temple</title>
+    <link rel="stylesheet" href="mixer.css">
 </head>
 <body>
+    <div class="volumebx">
+        <img src="volume_up.svg" alt="volume_up" class="volbutton">
+        <img src="divider_volumebar.svg" alt="divider_volumebar" class="volbutton">
+        <img src="volume_down.svg" alt="volume_down" class="volbutton">
+    </div>
+
     
 </body>
 </html>
